--- a/Boton/app/src/main/res/layout/activity_main.xml
+++ b/Boton/app/src/main/res/layout/activity_main.xml
@@ -23,8 +23,8 @@
             <Button
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:text=""
-                android:onClick=""
+                android:text="Abrir enlace"
+                android:onClick="BTEnlace"
                 android:layout_marginTop="10dp"/>
             <Button
                 android:layout_width="fill_parent"
